--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: "FS Meridian Regular",sans-serif;
+    font-family: "FS Meridian Regular", sans-serif;
     margin: 0px;
     color: #fff;
     letter-spacing: normal;
@@ -49,4 +49,24 @@ text-decoration: none;
     color: #FFF;
     height: 40px;
     margin-bottom: 10px;
+}
+
+.title__link {
+    font-size: 20px;
+    line-height: 30px;
+    color: #fff;
+    border: aliceblue;
+    border-color: #fff !important;
+    font-family: "FS Meridian Medium",sans-serif;
+    font-weight: 500;
+    text-transform: none;
+    border-bottom: 1px solid;
+    display: inline-block;
+    text-decoration: none;
+    letter-spacing: normal;
+    font-variant-ligatures: no-common-ligatures;
+    cursor: pointer;
+    background-color: transparent;
+    font-weight: 500;
+    text-align: left;
 }
