--- a/css/main.css
+++ b/css/main.css
@@ -448,6 +448,18 @@ a {
   color: #000;
 }
 
+.mr20 {
+  margin-right: 35px;
+}
+
+.button__section {
+  width: 100%;
+  height: 45px;
+  border: 2px solid #000;
+  background-color: transparent;
+  font-size: x-large;
+}
+
 .modal__backdrop {
   position: fixed;
   top: 0;
