--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -145,3 +145,17 @@ font-size: 1.4rem;
     text-transform: capitalize;
     text-align: left; color:#000;
 }
+
+.mr20 {
+    
+    margin-right: 35px;
+
+}
+
+.button__section {
+        width: 100%;
+    height: 45px;
+    border: 2px solid #000;
+    background-color: transparent;
+    font-size: x-large;
+}
