--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -159,3 +159,12 @@ font-size: 1.4rem;
     background-color: transparent;
     font-size: x-large;
 }
+
+a {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+button {
+    cursor: pointer;
+}
