--- a/css/main.css
+++ b/css/main.css
@@ -468,7 +468,12 @@ a {
   height: 45px;
   border: 2px solid #000;
   background-color: transparent;
-  font-size: x-large;
+  font-size: initial;
+}
+@media screen and (min-width: 1200px) {
+  .button__section {
+    font-size: x-large;
+  }
 }
 
 a {
@@ -526,6 +531,20 @@ button {
 @media screen and (min-width: 1200px) {
   .header__logo-img {
     width: auto;
+  }
+}
+
+.footer__section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  max-width: 1470px;
+  font-size: 0.99rem;
+}
+@media screen and (min-width: 1200px) {
+  .footer__section {
+    padding: 20px;
   }
 }
 
