--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -160,11 +160,14 @@ font-size: 1.4rem;
 }
 
 .button__section {
-        width: 100%;
+    width: 100%;
     height: 45px;
     border: 2px solid #000;
     background-color: transparent;
-    font-size: x-large;
+    font-size: initial;
+    @media screen and (min-width:1200px) {
+        font-size: x-large;
+    }   
 }
 
 a {
@@ -213,5 +216,17 @@ button {
     width: 60px;
     @media screen and (min-width: 1200px) {
         width: auto;
+    }
+}
+
+.footer__section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px;
+    max-width: 1470px;
+    font-size: 0.99rem;
+    @media screen and (min-width:1200px) {
+        padding: 20px;
     }
 }
