--- a/css/main.css
+++ b/css/main.css
@@ -541,10 +541,12 @@ button {
   padding: 8px;
   max-width: 1470px;
   font-size: 0.99rem;
+  border-top: solid 2px #979797;
 }
 @media screen and (min-width: 1200px) {
   .footer__section {
     padding: 20px;
+    border-top: solid 2px #979797;
   }
 }
 
