--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -236,3 +236,14 @@ button {
         border-top: solid 2px #979797;
     }
 }
+
+.footer__ul {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    font-size: 1rem;
+    @media screen and (min-width:1200px) {
+       font-size: 1.6rem;
+} 
+    }
+    
