--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,7 @@
 /* @import './layout/modal'; */ 
 @import './layout/normalize'; 
-@import './layout/body';
 @import './layout/modal';
+@import './layout/body';
+@import './layout/icons';
+@import './layout/buttons';
+
