--- a/sass/layout/_buttons.scss
+++ b/sass/layout/_buttons.scss
@@ -184,7 +184,7 @@
   min-height: 30px;
   min-width: 30px;
   padding: 0;
-  background-color: #fff;
+  background-color: #3c3027;
   color: #000;
   border-radius: 50%;
   border: 1px solid rgba(0,0,0,.1);
@@ -209,7 +209,82 @@
   min-height: 30px;
   min-width: 30px;
   padding: 0;
-  background-color: #fff;
+  background-color: #3c3027;
+  color: #000;
+  border-radius: 50%;
+  border: 1px solid rgba(0,0,0,.1);
+  cursor: pointer;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus, 
+    &:hover {
+       color: brown;
+  }
+}
+
+.button__modal1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 11px;
+  right: 11px;
+  min-height: 30px;
+  min-width: 30px;
+  padding: 0;
+  background-color: #3c3027;
+  color: #000;
+  border-radius: 50%;
+  border: 1px solid rgba(0,0,0,.1);
+  cursor: pointer;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus, 
+    &:hover {
+       color: brown;
+  }
+}
+
+.button__modal2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 11px;
+  right: 11px;
+  min-height: 30px;
+  min-width: 30px;
+  padding: 0;
+  background-color: #3c3027;
+  color: #000;
+  border-radius: 50%;
+  border: 1px solid rgba(0,0,0,.1);
+  cursor: pointer;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus, 
+    &:hover {
+       color: brown;
+  }
+}
+
+.button__modal3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 11px;
+  right: 11px;
+  min-height: 30px;
+  min-width: 30px;
+  padding: 0;
+  background-color: #3c3027;
   color: #000;
   border-radius: 50%;
   border: 1px solid rgba(0,0,0,.1);
