--- a/sass/layout/_icons.scss
+++ b/sass/layout/_icons.scss
@@ -93,7 +93,13 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon__close5 {
-  fill: currentColor;
+  fill: #fff;
+  width: 18px;
+  height: 18px;
+}
+
+.icon__close3 {
+  fill: #fff;
   width: 18px;
   height: 18px;
 }
