--- a/css/main.css
+++ b/css/main.css
@@ -422,9 +422,8 @@ u, ins {
   width: 90%;
   height: auto;
   padding: 40px;
-  background-color: var(--main-title-color);
+  background-color: rgba(246, 246, 244, 0.9294117647);
   opacity: 1;
-  border-radius: 6px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   transition-property: opacity, transform;
@@ -483,7 +482,6 @@ u, ins {
   width: 90%;
   height: 40px;
   border: 1px solid rgb(60, 48, 39);
-  border-radius: 4px;
   padding-left: 42px;
   transition-property: border;
   transition-duration: 250ms;
@@ -862,7 +860,6 @@ u, ins {
   width: 90%;
   height: 40px;
   border: 1.5px solid rgb(60, 48, 39);
-  border-radius: 4px;
   padding-left: 42px;
   transition-property: border;
   transition-duration: 250ms;
@@ -907,7 +904,6 @@ u, ins {
   color: #000;
   border: 1.5px solid rgb(60, 48, 39);
   box-sizing: border-box;
-  border-radius: 4px;
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -990,7 +986,7 @@ u, ins {
   padding: 10px 29px;
   height: 50px;
   color: #fff;
-  background-color: #3c3027;
+  background-color: #9f7f66;
   font-weight: 200;
   font-size: large;
   line-height: 1.87;
@@ -1012,6 +1008,18 @@ u, ins {
   color: #000;
   font-size: 12px;
   width: 100%;
+}
+
+.modal__hero-text4 {
+  padding: 10px;
+  color: #000;
+  font-size: 12px;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  .modal__hero-text4 {
+    font-size: 17px;
+  }
 }
 
 .modal__link-btn {
@@ -1049,6 +1057,71 @@ u, ins {
   color: brown;
 }
 
+.modal__backdrop1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 101;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.62);
+  opacity: 1;
+  visibility: visible;
+  transition-property: opacity, visibility;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__backdrop1.is-hidden1 {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal__backdrop1.is-hidden1 > .modal1 {
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(2.9);
+}
+
+.modal1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%) scale(1);
+  height: 90vh;
+  width: 90vw;
+  height: auto;
+  padding: 15px 15px 0px 15px;
+  background-color: rgba(246, 246, 244, 0.9294117647);
+  opacity: 1;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition-property: opacity, transform;
+  transition-duration: var(--duration);
+  transition-timing-function: var(--function);
+}
+@media screen and (min-width: 480px) {
+  .modal1 {
+    height: 90vh;
+    width: 90vw;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal1 {
+    height: 90vh;
+    width: 90vw;
+  }
+}
+
+.modal__close1 {
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  display: block;
+  color: brown;
+  margin-top: 20px;
+}
+
 .modal__backdrop2 {
   position: fixed;
   top: 0;
@@ -1070,7 +1143,7 @@ u, ins {
   pointer-events: none;
 }
 
-.modal__backdrop2.is-hidden2 > .modal2 {
+.modal__backdrop2.is-hidden4 > .modal2 {
   opacity: 0;
   transform: translate(-50%, -50%) scale(2.9);
 }
@@ -1081,12 +1154,12 @@ u, ins {
   left: 50%;
   text-align: center;
   transform: translate(-50%, -50%) scale(1);
-  width: 90%;
+  height: 90vh;
+  width: 90vw;
   height: auto;
   padding: 15px 15px 0px 15px;
-  background-color: var(--main-title-color);
+  background-color: rgba(246, 246, 244, 0.9294117647);
   opacity: 1;
-  border-radius: 6px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   transition-property: opacity, transform;
@@ -1095,21 +1168,23 @@ u, ins {
 }
 @media screen and (min-width: 480px) {
   .modal2 {
-    width: 354px;
+    height: 90vh;
+    width: 90vw;
   }
 }
 @media screen and (min-width: 1200px) {
   .modal2 {
-    width: 528px;
+    height: 90vh;
+    width: 90vw;
   }
 }
 
 .modal__close2 {
-  margin-bottom: 14px;
+  margin-bottom: 10px;
   text-transform: uppercase;
-  display: inline-block;
+  display: block;
   color: brown;
-  margin-top: 11px;
+  margin-top: 20px;
 }
 
 .modal__backdrop3 {
@@ -1133,7 +1208,7 @@ u, ins {
   pointer-events: none;
 }
 
-.modal__backdrop3.is-hidden3 > .modal3 {
+.modal__backdrop3.is-hidden4 > .modal3 {
   opacity: 0;
   transform: translate(-50%, -50%) scale(2.9);
 }
@@ -1144,12 +1219,12 @@ u, ins {
   left: 50%;
   text-align: center;
   transform: translate(-50%, -50%) scale(1);
-  width: 90%;
+  height: 90vh;
+  width: 90vw;
   height: auto;
   padding: 15px 15px 0px 15px;
-  background-color: var(--main-title-color);
+  background-color: rgba(246, 246, 244, 0.9294117647);
   opacity: 1;
-  border-radius: 6px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   transition-property: opacity, transform;
@@ -1158,12 +1233,14 @@ u, ins {
 }
 @media screen and (min-width: 480px) {
   .modal3 {
-    width: 354px;
+    height: 90vh;
+    width: 90vw;
   }
 }
 @media screen and (min-width: 1200px) {
   .modal3 {
-    width: 528px;
+    height: 90vh;
+    width: 90vw;
   }
 }
 
@@ -1173,6 +1250,15 @@ u, ins {
   display: block;
   color: brown;
   margin-top: 20px;
+}
+
+.modal4__pad {
+  padding: 10px;
+}
+@media screen and (min-width: 1200px) {
+  .modal4__pad {
+    padding: 72px;
+  }
 }
 
 .modal__backdrop4 {
@@ -1207,12 +1293,12 @@ u, ins {
   left: 50%;
   text-align: center;
   transform: translate(-50%, -50%) scale(1);
-  width: 90%;
+  height: 90vh;
+  width: 90vw;
   height: auto;
   padding: 15px 15px 0px 15px;
-  background-color: var(--main-title-color);
+  background-color: rgba(246, 246, 244, 0.9294117647);
   opacity: 1;
-  border-radius: 6px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   transition-property: opacity, transform;
@@ -1221,12 +1307,14 @@ u, ins {
 }
 @media screen and (min-width: 480px) {
   .modal4 {
-    width: 354px;
+    height: 90vh;
+    width: 90vw;
   }
 }
 @media screen and (min-width: 1200px) {
   .modal4 {
-    width: 528px;
+    height: 90vh;
+    width: 90vw;
   }
 }
 
@@ -1236,6 +1324,15 @@ u, ins {
   display: block;
   color: brown;
   margin-top: 20px;
+}
+
+.modal4__pad {
+  padding: 10px;
+}
+@media screen and (min-width: 1200px) {
+  .modal4__pad {
+    padding: 72px;
+  }
 }
 
 .modal__p {
@@ -1291,9 +1388,8 @@ u, ins {
   width: 80%;
   height: auto;
   padding: 40px;
-  background-color: #f6f6f4;
+  background-color: rgba(246, 246, 244, 0.9294117647);
   opacity: 1;
-  border-radius: 6px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   transition-property: opacity, transform;
@@ -1323,7 +1419,7 @@ u, ins {
   margin-top: 0;
   margin-bottom: 12px;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 22px;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
@@ -1709,7 +1805,13 @@ button {
 }
 
 .icon__close5 {
-  fill: currentColor;
+  fill: #fff;
+  width: 18px;
+  height: 18px;
+}
+
+.icon__close3 {
+  fill: #fff;
   width: 18px;
   height: 18px;
 }
@@ -1855,7 +1957,7 @@ button {
   min-height: 30px;
   min-width: 30px;
   padding: 0;
-  background-color: #fff;
+  background-color: #3c3027;
   color: #000;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -1878,7 +1980,7 @@ button {
   min-height: 30px;
   min-width: 30px;
   padding: 0;
-  background-color: #fff;
+  background-color: #3c3027;
   color: #000;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -1888,5 +1990,74 @@ button {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button__modal5:focus, .button__modal5:hover {
+  color: brown;
+}
+
+.button__modal1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 11px;
+  right: 11px;
+  min-height: 30px;
+  min-width: 30px;
+  padding: 0;
+  background-color: #3c3027;
+  color: #000;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button__modal1:focus, .button__modal1:hover {
+  color: brown;
+}
+
+.button__modal2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 11px;
+  right: 11px;
+  min-height: 30px;
+  min-width: 30px;
+  padding: 0;
+  background-color: #3c3027;
+  color: #000;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button__modal2:focus, .button__modal2:hover {
+  color: brown;
+}
+
+.button__modal3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 11px;
+  right: 11px;
+  min-height: 30px;
+  min-width: 30px;
+  padding: 0;
+  background-color: #3c3027;
+  color: #000;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button__modal3:focus, .button__modal3:hover {
   color: brown;
 }/*# sourceMappingURL=main.css.map */
